--- a/round3_work_water.html
+++ b/round3_work_water.html
@@ -154,8 +154,16 @@
     <label><input type="checkbox" class="mentionCheckbox" value="@김종학[평택HUB_출하]" checked />@김종학[평택HUB_출하]</label>
   </div>
 
-  <!-- 💬 댓글 체크리스트 -->
-  <fieldset class="checklist-group">
+  <!-- 📷 필요 사진 체크리스트 (맨 밑에 위치) -->
+  <fieldset class="checklist-group" style="margin-top: 40px;">
+    <legend>📷 필요 사진 체크리스트</legend>
+    <label><input type="checkbox" class="photoCheck" checked /> 트럭사진</label>
+    <label><input type="checkbox" class="photoCheck" checked /> 내선 PLT</label>
+    <label><input type="checkbox" class="photoCheck" checked /> 물작업 최종 수량 엑셀 사진</label>
+  </fieldset>
+
+  <!-- 💬 댓글 체크리스트 (필요사진 체크리스트 밑으로 이동) -->
+  <fieldset class="checklist-group" style="margin-top: 20px;">
     <legend>💬 댓글 체크리스트</legend>
     <label><input type="checkbox" class="commentCheck" checked /> 물작업 사진 10장</label>
   </fieldset>
@@ -170,14 +178,6 @@
   <button class="copy-btn" id="copyBtn">복사하기</button>
   <div class="copy-success" id="copySuccess">복사되었습니다!</div>
 
-  <!-- 📷 필요 사진 체크리스트 (맨 밑에 위치) -->
-  <fieldset class="checklist-group" style="margin-top: 40px;">
-    <legend>📷 필요 사진 체크리스트</legend>
-    <label><input type="checkbox" class="photoCheck" checked /> 트럭사진</label>
-    <label><input type="checkbox" class="photoCheck" checked /> 내선 PLT</label>
-    <label><input type="checkbox" class="photoCheck" checked /> 물작업 최종 수량 엑셀 사진</label>
-  </fieldset>
-
   <script>
     const pInput = document.getElementById('pInput');
     const timeInput = document.getElementById('timeInput');
@@ -185,9 +185,6 @@
     const resultBox = document.getElementById('resultBox');
     const copyBtn = document.getElementById('copyBtn');
     const copySuccess = document.getElementById('copySuccess');
-
-    const commentChecks = document.querySelectorAll('.commentCheck');
-    // photoCheck는 복사내용 제외하므로 이벤트만 필요 없음
 
     function updateResult() {
       const pVal = pInput.value.trim() || '○○';
@@ -197,25 +194,16 @@
       const checkedMentions = Array.from(document.querySelectorAll('.mentionCheckbox:checked')).map(cb => cb.value);
       const mentionsText = checkedMentions.join(' ');
 
-      // 체크된 댓글 체크리스트 텍스트
-      const checkedComments = Array.from(commentChecks).filter(cb => cb.checked).map(cb => cb.parentElement.textContent.trim());
-
-      // 댓글 리스트 문구 (선택된 것만)
-      let commentListText = '';
-      if (checkedComments.length > 0) {
-        commentListText = '댓글 체크리스트:\n' + checkedComments.map(item => ' - ' + item).join('\n');
-      }
+      // 댓글 체크리스트는 복사 문구에 포함하지 않음
 
       resultBox.textContent = `6층 SIOC 생수 3회차 ${pVal}P 상차후 ${timeVal} 1층으로 내려갑니다.
 
-${mentionsText}
-
-${commentListText}`;
+${mentionsText}`;
       copySuccess.style.display = 'none';
     }
 
     // 이벤트 리스너 등록
-    [pInput, timeInput, mentionList, ...commentChecks].forEach(el => {
+    [pInput, timeInput, mentionList].forEach(el => {
       el.addEventListener('input', updateResult);
       el.addEventListener('change', updateResult);
     });
