--- a/cg_work1.html
+++ b/cg_work1.html
@@ -151,8 +151,11 @@
     const copySuccess = document.getElementById('copySuccess');
     const mentionList = document.getElementById('mentionList');
 
-    function padNumber(num, length = 2) {
-      return num.toString().padStart(length, '0');
+    // 숫자 10 이하일때 앞 0 없이 숫자만 반환하는 함수
+    function formatPNumber(num) {
+      const n = Number(num);
+      if (n <= 10) return n.toString();
+      return n.toString();
     }
 
     function getSelectedMentions() {
@@ -162,7 +165,7 @@
     }
 
     function updateResult() {
-      const pVal = pInput.value ? padNumber(pInput.value) + 'P' : '○○P';
+      const pVal = pInput.value ? formatPNumber(pInput.value) + 'P' : '○○P';
       const timeVal = timeInput.value.trim() || '○○:○○';
       const mentionText = getSelectedMentions();
       resultText.textContent = `6층 SIOC 충청, 광주 1회차 ${pVal} 상차후 ${timeVal} 1층으로 내려갑니다.\n\n\n${mentionText}`;
