--- a/direct_round3.html
+++ b/direct_round3.html
@@ -141,6 +141,11 @@
     const copySuccess = document.getElementById("copySuccess");
     const mentionCheckboxes = document.getElementById("mentionCheckboxes");
 
+    function formatPNumber(num) {
+      const n = Number(num);
+      return n <= 10 ? n.toString() : n.toString();
+    }
+
     mentions.forEach(text => {
       const label = document.createElement("label");
       const checkbox = document.createElement("input");
@@ -153,17 +158,13 @@
       mentionCheckboxes.appendChild(label);
     });
 
-    function padNumber(num, length = 2) {
-      return num.toString().padStart(length, "0");
-    }
-
     function getSelectedMentions() {
       const checked = mentionCheckboxes.querySelectorAll("input:checked");
       return Array.from(checked).map(cb => cb.value).join("\n");
     }
 
     function updateResult() {
-      const p = pInput.value ? padNumber(pInput.value) + "P" : "○○P";
+      const p = pInput.value ? formatPNumber(pInput.value) + "P" : "○○P";
       const time = timeInput.value.trim() || "○○:○○";
       const mention = getSelectedMentions();
       resultText.textContent = `6층 SIOC 직배 3회차 ${p} 상차후 ${time} 1층으로 내려갑니다.\n\n\n${mention}`;
@@ -189,4 +190,3 @@
   </script>
 </body>
 </html>
-
