--- a/obungi_report.html
+++ b/obungi_report.html
@@ -162,7 +162,7 @@
     <input type="number" id="count" placeholder="예: 1" min="1" value="1" />
 
     <div id="orderTitles">
-      <div>지시 슈트 번호</div>
+      <div>지시 슈트 번호(잘못나온 제품 슈트)</div>
       <div>지시 권역</div>
     </div>
 
